--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,14 +5,14 @@ services:
     container_name: "mysql_writer"
     image: mysql
     env_file:
-      - ${PWD}/iaac/mysql/writer/mysql.env
+      - ${PWD}/writer/mysql.env
     restart: "no"
     ports:
       - 4406:3306
     volumes:
-      - ${PWD}/iaac/mysql/writer/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
-      - ${PWD}/iaac/mysql/writer/conf/mysql.client.cnf:/etc/mysql.client.cnf
-      - ${PWD}/iaac/mysql/writer/data:/var/lib/mysql
+      - ${PWD}/writer/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
+      - ${PWD}/writer/conf/mysql.client.cnf:/etc/mysql.client.cnf
+      - ${PWD}/writer/data:/var/lib/mysql
     networks:
       - overlay
 
@@ -20,16 +20,16 @@ services:
     container_name: "mysql_reader"
     image: mysql
     env_file:
-      - ${PWD}/iaac/mysql/reader/mysql.env
+      - ${PWD}/reader/mysql.env
     restart: "no"
     ports:
       - 5506:3306
     depends_on:
       - mysql_writer
     volumes:
-      - ${PWD}/iaac/mysql/reader/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
-      - ${PWD}/iaac/mysql/reader/conf/mysql.client.cnf:/etc/mysql.client.cnf
-      - ${PWD}/iaac/mysql/reader/data:/var/lib/mysql
+      - ${PWD}/reader/conf/mysql.conf.cnf:/etc/mysql/conf.d/mysql.conf.cnf
+      - ${PWD}/reader/conf/mysql.client.cnf:/etc/mysql.client.cnf
+      - ${PWD}/reader/data:/var/lib/mysql
     networks:
       - overlay
 
