--- a/reader/conf/mysql.conf.cnf
+++ b/reader/conf/mysql.conf.cnf
@@ -1,6 +1,16 @@
 [mysqld]
+
+# Disable DNS host name lookups
 skip-name-resolve
-default_authentication_plugin = mysql_native_password
+
+# Unique server ID. It must be different from every other ID in use by any other source or replica.
 server-id = 2
+
+# Enables bin log and sets the base name and path for the binary log files
 log_bin = 1
+
+# Specify a database, which statements will be written to binary log file.
 binlog_do_db = gorm_spike
+
+# Native password authentication
+default_authentication_plugin = mysql_native_password
