--- a/reader/conf/mysql.conf.cnf
+++ b/reader/conf/mysql.conf.cnf
@@ -1,9 +1,20 @@
-[mysqld]
+[mysqld] // This section is specific to the MySQL daemon process
 
+// Disable DNS name resolution for incoming client connections
 skip-name-resolve
+
+// Use the traditional authentication plugin for MySQL
 default_authentication_plugin = mysql_native_password
 
+// Set the server ID for replication purposes
 server-id = 2
+
+// Enable binary logging
 log_bin = 1
+
+// Specify which database(s) to include in binary logging
 binlog_do_db = gorm_spike
+
+// Make the server read-only to prevent accidental updates or data loss
+read_only = 1
 
