mysql writer configuration

--- a/reader/conf/mysql.client.cnf
+++ b/reader/conf/mysql.client.cnf
@@ -1,6 +1,6 @@
 [client]
 host=mysql_reader
-user=replication_user
-password=replication_user_password
+user=reader_admin_user
+password=reader_admin_password
 
 
