--- a/reader/conf/mysql.conf.cnf
+++ b/reader/conf/mysql.conf.cnf
@@ -4,19 +4,19 @@
 skip-name-resolve
 
 # Use the traditional authentication plugin for MySQL
-default_authentication_plugin = mysql_native_password
+default_authentication_plugin=mysql_native_password
 
 # Set the server ID for replication purposes
-server-id = 2
+server-id=2
 
 # Enable binary logging and specify the prefix for binary log files
-log_bin = mysql-reader-bin 
+log_bin=mysql-reader-bin 
 
 # Specify which database(s) to include in binary logging
-binlog_do_db = gorm_spike
+binlog_do_db=gorm_spike
 
 # Make the server read-only to prevent accidental updates or data loss
-read_only = 1
+read_only=1
 
 
 
