--- a/writer/conf/mysql.conf.cnf
+++ b/writer/conf/mysql.conf.cnf
@@ -4,16 +4,16 @@
 skip-name-resolve
 
 # Use the traditional authentication plugin for MySQL
-default_authentication_plugin = mysql_native_password
+default_authentication_plugin=mysql_native_password
 
 # Set the server ID for replication purposes
-server-id = 1
+server-id=1
 
 # Enable binary logging and specify the prefix for binary log files
-log_bin = mysql-writer-bin
+log_bin=mysql-writer-bin
 
 # Specify which database(s) to include in binary logging
-binlog_do_db = gorm_spike
+binlog_do_db=gorm_spike
 
 # Specify the binary log format to use for replication
 binlog_format = ROW
