mysql writer configuration

--- a/reader/conf/mysql.client.cnf
+++ b/reader/conf/mysql.client.cnf
@@ -1,6 +1,6 @@
 [client]
 host=mysql_reader
-user=reader_admin_user
-password=reader_admin_password
+user=replication_user
+password=replication_password
 
 
